about.css
p {
  /* PARAGRAPH SETTINGS */
  font-size: 15px;
  line-height: 1.6;
  margin-bottom: 1rem;
}

main {
  /* MAIN */
  padding: 40px 80px;
}

.flex-container {
  display: flex;
  gap: 20px;
  padding: 20px;
  align-items: flex-start;
}

.flex-item {
  background-color: rgba(207, 163, 110, 0.744);
  padding: 20px;
  text-align: center;
  font-size: 20px;
  border: none;
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  text-align: left;
  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
}

.flex-item h2 {
  color: #ffffff;
  margin-top: 0;
  font-size: medium;
}

.flex-item p {
  font-size: 16px;
  line-height: 1.6;
}

.flex-item:hover {
  transform: translateY(-5px);
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
}

a {
  color: #f4dfc2;
}

@media screen and (max-width: 620px) {
  main {
    padding: 15px;
  }

  p {
    font-size: 14px;
  }

  .flex-item {
    font-size: 16px;
  }

  .flex-item p {
    font-size: 14px;
  }

  .flex-container {
    gap: 1em;
    width: 95%;
  }
}

